tests/miniJava/neg/006754_mutation.MiniJava
class java { true static void Main ( String [ ] java ) { { } } }
